scrap bugs fix frontend, cust view pancard, applied scrap changes

--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.scss
@@ -82,5 +82,10 @@
     }
     .cursor-not-allowed{
 		cursor: not-allowed !important;
-	}
+    }
+    .custom-icon {
+		position: relative;
+		// top: 6px;
+		color: gray;
+	 }
 }
