--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
@@ -49,6 +49,12 @@
                             [ngClass]="item?.scrapStatusForAppraiser == 'pending' ? 'text-warning' : item?.scrapStatusForAppraiser == 'approved' ? 'text-success' : 'text-danger'">
                             {{item?.scrapStage?.id == 9 || item?.scrapStage?.id == 10 ? '-'  : item?.scrapStatusForAppraiser | titlecase}}
                         </span>
+                        <span *ngIf="item?.commentByAppraiser"
+                        class="material-icons custom-icon" mat-raised-button
+                        matTooltip={{item?.commentByAppraiser}} matTooltipPosition="above"
+                        matTooltipClass="custom-tooltip-white">
+                        info
+                    </span>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="bMApproval">
@@ -58,6 +64,12 @@
                             [ngClass]="item?.scrapStatusForBM == 'pending' ? 'text-warning' : item?.scrapStatusForBM == 'approved' ? 'text-success' : 'text-danger'">
                             {{item?.scrapStage?.id == 9 || item?.scrapStage?.id == 10 ? '-'  : item?.scrapStatusForBM | titlecase}}
                         </span>
+                        <span *ngIf="item?.commentByBM"
+                        class="material-icons custom-icon" mat-raised-button
+                        matTooltip={{item?.commentByBM}} matTooltipPosition="above"
+                        matTooltipClass="custom-tooltip-white">
+                        info
+                    </span>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="oTApproval">
@@ -67,6 +79,12 @@
                             [ngClass]="item?.scrapStatusForOperatinalTeam == 'pending' ? 'text-warning' : item?.scrapStatusForOperatinalTeam == 'approved' ? 'text-success' : 'text-danger'">
                             {{item?.scrapStage?.id == 9 || item?.scrapStage?.id == 10 ? '-'  : item?.scrapStatusForOperatinalTeam | titlecase}}
                         </span>
+                        <span *ngIf="item?.commentByOperatinalTeam"
+                        class="material-icons custom-icon" mat-raised-button
+                        matTooltip={{item?.commentByOperatinalTeam}} matTooltipPosition="above"
+                        matTooltipClass="custom-tooltip-white">
+                        info
+                    </span>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="actions">
