--- a/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
@@ -184,13 +184,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6" *ngIf="details?.isUnsecuredSchemeApplied">
+            <div class="col-6">
                 <div class="row justify-content-center kt-margin-t-10">
                     <div class="col-4 form-label">
                         <label class="kt-padding-l-10 mandatory">Final Loan Amount</label>
                     </div>
                     <div class="col-8">
-                        <input type="text" class="form-control" formControlName="unsecuredLoanAmount">
+                        <input type="text" class="form-control" formControlName="finalAmount">
                     </div>
                 </div>
             </div>
