--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/assign-appraiser/assign-appraiser/assign-appraiser.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/assign-appraiser/assign-appraiser/assign-appraiser.component.html
@@ -139,7 +139,7 @@
 
                             <div class="col-4">
                                 <input [ngxTimepicker]="picker1" class="form-control" formControlName="startTime"
-                                    placeholder="From" [min]="addStartTime" [max]="'06:00 pm'"
+                                    placeholder="From" [min]="addStartTime" [max]="max"
                                     [class.isError]="controls.startTime.touched && controls.startTime.invalid">
                                 <ngx-material-timepicker #picker1 (timeChanged)="setStartTime($event)">
                                 </ngx-material-timepicker>
@@ -152,7 +152,7 @@
                                 <input [ngxTimepicker]="picker2" class="form-control" formControlName="endTime"
                                     placeholder="To" [min]="startTime" [max]="'06:00 pm'"
                                     [class.isError]="controls.endTime.touched && controls.endTime.invalid">
-                                <ngx-material-timepicker #picker2></ngx-material-timepicker>
+                                <ngx-material-timepicker #picker2 (timeChanged)="setMaxStartTime($event)"></ngx-material-timepicker>
                                 <mat-error *ngIf="controls.endTime.touched && controls.endTime.errors?.required">
                                     Required field
                                 </mat-error>
