--- a/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
@@ -140,6 +140,32 @@
 
     <div class="row kt-margin-t-15">
         <!-- loan ornaments -->
+        <div class="col-12 text-center card">
+            <div class="row justify-content-center py-3">
+                <div class="col-3 form-label">
+                    <label for="">Principal Outstanding </label>  <br>
+                    <span class="d-block">{{details.customerLoan[0].outstandingAmount}}  </span>
+                    <br>
+                    <span class="d-block" *ngIf="details.customerLoan.length > 1">{{details.customerLoan[1].outstandingAmount}}</span>
+                </div>
+                <div class="col-3">
+                    <kt-button [value]="'View Part Payment Logs'" [type]="'button'" (click)="viewPartPaymnetsLogs()">
+                    </kt-button>
+                </div>
+                <div class="col-3">
+                    <kt-button [value]="'View Interest EMI Logs'" [type]="'button'" (click)="viewEmiLogs()"></kt-button>
+
+                </div>
+            </div>
+
+
+            <!-- <kt-button [value]="'View Part Payment EMI'" [type]="'button'"></kt-button> -->
+
+        </div>
+    </div>
+
+    <div class="row kt-margin-t-15">
+        <!-- loan ornaments -->
         <div class="col-12 card kt-padding-15" *ngIf="masterLoanId">
             <label class="font-weight-bold text-color kt-margin-b-25 kt-margin-t-25">Ornaments - Total
                 {{details?.loanOrnamentsDetail?.length}} Ornaments</label>
@@ -485,7 +511,8 @@
             <label class="font-weight-bold text-color kt-margin-b-25 kt-margin-t-25">Disbursement</label>
 
             <div class="row" *ngIf="masterLoanId">
-                <kt-disburse [disable]="true" [loanDetials]="details" [masterAndLoanIds]="masterAndLoanIds" [disbursed]="true">
+                <kt-disburse [disable]="true" [loanDetials]="details" [masterAndLoanIds]="masterAndLoanIds"
+                    [disbursed]="true">
                 </kt-disburse>
             </div>
         </div>
