--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment/part-payment.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment/part-payment.component.html
@@ -68,7 +68,7 @@
                                     <label for="" class="mb-0"> Enter Amount </label>
                                 </div>
                                 <div class="col">
-                                    <input [class.isError]="partAmount.touched && partAmount.invalid"
+                                    <input ktWeight [class.isError]="partAmount.touched && partAmount.invalid"
                                         class="form-control" type="text" [formControl]="partAmount" ktWeight />
                                     <mat-error *ngIf="partAmount.errors?.required && partAmount.touched">
                                         Field Required
