--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.html
@@ -97,7 +97,7 @@
                                 </td>
 
                                 <td>{{payableAmount?.payableAmount}}</td>
-                                <td><input type="text" class="form-control" [formControl]="payableAmt"
+                                <td><input ktWeight type="text" class="form-control" [formControl]="payableAmt"
                                         [class.isError]="payableAmt.touched && payableAmt.invalid">
                                     <mat-error *ngIf="payableAmt.errors?.required && payableAmt.touched">
                                         Field Required
