--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
@@ -3,6 +3,8 @@
 <kt-portlet>
 
     <kt-portlet-body>
+        <!-- <button (click)="checkout()"></button>
+        <button (click)="submitPacket()"></button> -->
 
         <div class="mat-table__wrapper">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
@@ -167,6 +169,11 @@
                                         class="primary-button">{{loan.loanStage.name | uppercase}}</button>
                                 </div>
                             </div>
+
+                            <!-- <div *ngIf="loan.loanStage.id == 9">
+                                <button (click)="editLoan(loan)"
+                                    class="primary-button">{{loan.loanStage.name | uppercase}}</button>
+                            </div> -->
 
 
                         </div>
