--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.scss
@@ -39,6 +39,11 @@
     .mat-column-new  {
         flex: 0 0 10% !important;
     }
+
+    .mat-column-applicationDate  {
+        flex: 0 0 8% !important;
+    }
+
     
     .dropdown-menu > li > a, .dropdown-menu > .dropdown-item {
         padding: 0 10px !important;
