--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/nominee-details/nominee-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/nominee-details/nominee-details.component.html
@@ -90,7 +90,7 @@
                             </div>
                             <div class="col-6">
                                 <input type="number" class="form-control" placeholder="18" numbersOnly
-                                    formControlName="guardianAge"
+                                    formControlName="guardianAge" maxlength="3" ktZeroToHundredWhole
                                     [class.isError]="controls.guardianAge.touched && controls.guardianAge.invalid">
                                 <mat-error *ngIf="controls.guardianAge.touched && controls.guardianAge.invalid">
                                     <span *ngIf="controls.guardianAge.errors?.required">Field is Required</span>
