--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user/add-internal-user/add-internal-user.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user/add-internal-user/add-internal-user.component.html
@@ -113,7 +113,7 @@
                             </div>
                         </div>
 
-                        <div class="row kt-padding-t-15" *ngIf="data.action != 'edit'">
+                        <div class="row kt-padding-t-15" >
                             <div class="col-4 form-label">
                                 <label for="" class="kt-padding-l-10 text-color"
                                     [class.mandatory]="controls.userTypeId.value == '7'">
