--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
@@ -170,10 +170,15 @@
                                 </div>
                             </div>
 
-                            <!-- <div *ngIf="loan.loanStage.id == 9">
-                                <button (click)="editLoan(loan)"
+                            <div *ngIf="loan.loanStage.id == 10">
+                                <button (click)="checkout(loan)"
                                     class="primary-button">{{loan.loanStage.name | uppercase}}</button>
-                            </div> -->
+                            </div>
+
+                            <div *ngIf="loan.loanStage.id == 11">
+                                <button (click)="getPacketDetails(loan)"
+                                    class="primary-button">{{loan.loanStage.name | uppercase}}</button>
+                            </div>
 
 
                         </div>
