--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -25,7 +25,8 @@
                             <kt-ornaments [action]="action" (next)="next($event)" [disable]="disabledForm"
                                 [details]="customerDetail" (totalAmt)="total($event)" (fullAmt)="fullAmt($event)"
                                 [masterAndLoanIds]="masterAndLoanIds" [ornamentType]="ornamentType"
-                                [showButton]="showButton" (loanTransfer)="loanTransfer($event)" (partPayment)=partPayment($event)>
+                                [showButton]="showButton" (loanTransfer)="loanTransfer($event)"
+                                (partPayment)=partPayment($event)>
                             </kt-ornaments>
                         </div>
                         <!-- </ng-template> -->
@@ -89,7 +90,7 @@
                     </mat-tab>
 
                     <mat-tab label="Disbursement"
-                        *ngIf="loanStage?.id == 4 || (loanStage?.id == 5 && url =='view-loan')">
+                        *ngIf="loanStage?.id == 4 || loanStage?.id == 10 || (loanStage?.id == 5 && url =='view-loan')">
                         <kt-disburse [masterAndLoanIds]="masterAndLoanIds" [loanDetials]="customerDetail"
                             [disable]="disabledForm" [showButton]="true" [disbursed]="disbursed"></kt-disburse>
                     </mat-tab>
