--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/checkout/checkout.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/checkout/checkout.component.html
@@ -12,7 +12,10 @@
                 <div class="col-8">
                     <input type="text" class="form-control" placeholder="Enter OTP" formControlName="otp"
                         [class.isError]="controls.otp.invalid &&  controls.otp.touched" [readonly]="otpVerfied"
-                        [class.cursor-not-allowed]="otpVerfied">
+                        [class.cursor-not-allowed]="otpVerfied" maxlength="4">
+                    <mat-error *ngIf="controls.otp.errors?.required && controls.otp.touched">Field Required </mat-error>
+                    <mat-error *ngIf="controls.otp.errors?.invalidOTP && controls.otp.touched">Invalid OTP </mat-error>
+
                 </div>
                 <!-- <div class="col-4" *ngIf="otpSent">
                     <kt-button *ngIf="!otpVerfied" [myClass]="'w-100'" [type]="'button'" [value]="'Verify'">
@@ -28,7 +31,7 @@
                         </kt-button>
                     </div> -->
                 <div class="col-4 offset-8 d-flex justify-content-end align-items-center ">
-                    <label class="kt-pointer kt-link kt-link--brand kt-font-bolder">
+                    <label (click)="resendOTP()" class="kt-pointer kt-link kt-link--brand kt-font-bolder">
                         Resend OTP</label>
                 </div>
             </div>
