--- a/gold-admin-frontend/src/app/views/pages/broker/orders/view-pay/view-pay.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/orders/view-pay/view-pay.component.html
@@ -120,7 +120,7 @@
                 <form [formGroup]="paymentForm">
                     
                     <div class="row py-3"
-                    *ngIf="orderData.orderCurrentStatus.id == 2 || orderData.orderCurrentStatus.id == 15">
+                    *ngIf="(orderData.orderCurrentStatus.id == 2 && orderData.paymentType.id !=4) || orderData.orderCurrentStatus.id == 15 || orderData.orderCurrentStatus.id == 3">
                         <div class="col-4 align-self-center">
                             <label class="font-weight-500 text-color" [class.mandatory]="isMandatory" >Payment
                                 Mode</label>
@@ -151,7 +151,7 @@
             </div>
             <div>
             <button
-            *ngIf="orderData.orderCurrentStatus.id == 2 || orderData.orderCurrentStatus.id == 3 || orderData.orderCurrentStatus.id == 15"
+            *ngIf="(orderData.orderCurrentStatus.id == 2 && orderData.paymentType.id !=4) || orderData.orderCurrentStatus.id == 3 || orderData.orderCurrentStatus.id == 15"
             type="button" [type]="'submit'" class="btn btn-outline my-3" (click)="getEmiAmount()" [disabled]="emi.length == 0 || paymentForm.controls.paymentMode.value == ''">Pay
             EMI</button>
             </div>
