--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
@@ -173,7 +173,7 @@
                     <mat-header-cell *matHeaderCellDef>Cancel Order</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <span
-                            *ngIf="element['orderCurrentStatus.id'] == 2 || element['orderCurrentStatus.id'] == 3 || element['orderCurrentStatus.id'] == 11">
+                            *ngIf="(element['orderCurrentStatus.id'] == 2 && element['paymentType.id'] != 4) || element['orderCurrentStatus.id'] == 3 || element['orderCurrentStatus.id'] == 11">
                             <kt-button [value]="'Cancel'" [type]="'submit'" (click)="cancelOrder(element)"></kt-button>
                         </span>
                     </mat-cell>
