pkt-submit packet branch in

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
@@ -180,6 +180,9 @@
                                     class="primary-button">{{loan.loanStage.name | uppercase}}</button>
                             </div>
 
+                            <div *ngIf="loan.loanStage.id == 12">
+                                <button class="primary-button">{{loan.loanStage.name | uppercase}}</button>
+                            </div>
 
                         </div>
                     </mat-cell>
