--- a/gold-admin-frontend/src/app/views/pages/admin/global-map/global-map.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/global-map/global-map.component.scss
@@ -5,7 +5,7 @@
     }
     .pos {
         position   : absolute;
-        top: 65px;
+        // top: 10px;
         left: 50%;
         transform: translate(-50%, 0);
         font-weight: 500;
