pkt-fe::partner branch in

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/update-location/update-location.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/update-location/update-location.component.html
@@ -114,22 +114,22 @@
                     </div>
 
                     <!-- Deliver To -->
-                    <!-- <div class="row">
+                    <div class="row">
                         <div class="col-12">
                             <div class="row kt-margin-t-15">
                                 <div class="col-4 form-label">
                                     <label class="kt-padding-l-10 mandatory">Deliver To</label>
                                 </div>
                                 <div class="col-8">
-                                        <select class="form-control" formControlName="deliveryPacketLocationId"
-                                        (change)="getPartnerBranch()"
+                                    <select class="form-control" formControlName="deliveryPacketLocationId"
+                                        (change)="getdeliveryPartnerBranch()"
                                         [class.isError]="locationForm.controls.deliveryPacketLocationId.invalid &&  locationForm.controls.deliveryPacketLocationId.touched">
                                         <option selected disabled value=null>Select Location</option>
                                         <option [value]="item.id" *ngFor="let item of deliveryLocations">
                                             {{item.location | titlecase}}</option>
                                     </select>
                                     <mat-error
-                                        *ngIf="locationForm.controls.deliverydeliveryPacketLocationId.touched && locationForm.controls.deliverydeliveryPacketLocationId.errors?.required">
+                                        *ngIf="locationForm.controls.deliveryPacketLocationId.touched && locationForm.controls.deliveryPacketLocationId.errors?.required">
                                         Required field
                                     </mat-error>
                                 </div>
@@ -144,7 +144,7 @@
                                     <select class="form-control" formControlName="partnerBranchId"
                                         [class.isError]="locationForm.controls.partnerBranchId.invalid &&  locationForm.controls.partnerBranchId.touched">
                                         <option selected disabled value=null>Select Branch</option>
-                                        <option [value]="item.id" *ngFor="let item of partnerBranches">
+                                        <option [value]="item.id" *ngFor="let item of deliveryPartnerBranches">
                                             {{item.name | titlecase}}</option>
                                     </select>
                                     <mat-error
@@ -154,7 +154,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                     <!-- Deliver To ends -->
 
                     <div class="row justify-content-center kt-margin-t-15">
