--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/update-location/update-location.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/update-location/update-location.component.html
@@ -114,7 +114,7 @@
                     </div>
 
                     <!-- Deliver To -->
-                    <div class="row">
+                    <div class="row" *ngIf="data.isOut">
                         <div class="col-12">
                             <div class="row kt-margin-t-15">
                                 <div class="col-4 form-label">
