--- a/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
@@ -55,7 +55,7 @@
                         <label class="kt-padding-l-10 mandatory">Loan Amount</label>
                     </div>
                     <div class="col-8">
-                        <input type="text" class="form-control" formControlName="finalLoanAmount">
+                        <input type="text" class="form-control" formControlName="fullSecuredAmount">
                     </div>
                 </div>
             </div>
@@ -190,7 +190,7 @@
                         <label class="kt-padding-l-10 mandatory">Final Loan Amount</label>
                     </div>
                     <div class="col-8">
-                        <input type="text" class="form-control" formControlName="fullAmount">
+                        <input type="text" class="form-control" formControlName="loanAmount">
                     </div>
                 </div>
             </div>
